SFUSA/force-app/main/default/objects/PR_Attachment__c/fields/Attachment_Id__c.field-meta.xml
<CustomField>
        <fullName>Attachment_Id__c</fullName>
        <description>Attachment ID</description>
        <label>Attachment_Id</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>