SFUSA/force-app/main/default/objects/PR_Attachment__c/fields/PR_Header__c.field-meta.xml
<CustomField>
        <fullName>PR_Header__c</fullName>
        <description>PR header is ID of the master record</description>
        <label>PR Header</label>
        <referenceTo>PR_Header__c</referenceTo>
        <relationshipName>PR_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>