SFUSA/force-app/main/default/objects/PR_Attachment__c/fields/Status__c.field-meta.xml
<CustomField>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>