SFUSA/force-app/main/default/objects/PR_Attachment__c/fields/Vendor__c.field-meta.xml
<CustomField>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PR Attachments</relationshipLabel>
        <relationshipName>PR_Attachments</relationshipName>
        <type>Lookup</type>
    </CustomField>